fix uneven spacing on attendance page

--- a/libraries/react/scss/ap_react.scss
+++ b/libraries/react/scss/ap_react.scss
@@ -239,10 +239,6 @@ textarea {
     }
   }
 
-  &-daywrap {
-    width: 100%;
-  }
-
   &-day {
     display: inline-block;
     cursor: pointer;
